--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/classnames": "^2.2.10",
     "@types/js-cookie": "^2.2.6",
     "@types/styled-components": "^5.0.1",
+    "@umijs/hooks": "^1.9.3",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.1.1",
     "antd": "^4.1.0",
